[gd_scene format=3 uid="uid://u20sma757gan"]

[ext_resource type="Script" uid="uid://dwuv0y5l07sft" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://c2lxntdnoebo7" path="res://assets/Starbim.ttf" id="1_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.5446727, 0.5369204, 0.98314065, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.3741449, 0.21226397, 0.5932343, 0.50980395)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="main_menu" type="Control" unique_id=954421685]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel" type="Panel" parent="." unique_id=1906032237]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1713675263]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.25
offset_top = -78.5
offset_right = 283.25
offset_bottom = 194.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="VBoxContainer" unique_id=1898215004]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.68307, 0.8808672, 0.9020758, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9160723, 0.807129, 0.08047711, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer" unique_id=780478602]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.68307, 0.8808672, 0.9020758, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9160723, 0.807129, 0.08047711, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
text = "How to Play"

[node name="Button3" type="Button" parent="VBoxContainer" unique_id=533562694]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.68307, 0.8808672, 0.9020758, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9160723, 0.807129, 0.08047711, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
text = "Settings"

[node name="Label" type="Label" parent="." unique_id=618869013]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -408.5
offset_top = 86.0
offset_right = 408.5
offset_bottom = 228.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.68235296, 0.88235295, 0.9019608, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 100
text = "Cosmic Drop"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_howtoplay_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_settings_pressed"]
